<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_add"
          android:icon="@drawable/ic_add"
          android:title="@string/menu_add"
          android:showAsAction="always" />

    <item android:id="@+id/menu_filter"
          android:title="@string/menu_filter">
        <menu>
            <item android:id="@+id/menu_filter_all"
                  android:title="@string/filter_all" />
            <item android:id="@+id/menu_filter_active"
                  android:title="@string/filter_active" />
            <item android:id="@+id/menu_filter_completed"
                  android:title="@string/filter_completed" />
        </menu>
    </item>


    <item android:id="@+id/menu_batch_delete_completed"
          android:title="@string/batch_delete_completed"
          android:showAsAction="never" />
</menu>
