<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_search"
          android:icon="@drawable/ic_search"
          android:title="@string/menu_search"
          android:showAsAction="always|collapseActionView"
          android:actionViewClass="android.widget.SearchView" />
    <!--  我们的一个标准应用操作（创建新笔记）。 -->
    <item android:id="@+id/menu_add"
          android:icon="@drawable/ic_edit"
          android:title="@string/menu_add"
          android:alphabeticShortcut='a'
          android:showAsAction="always" />
    <!--  如果剪贴板中当前有数据，则在菜单中添加“粘贴”项，
          以便用户粘贴该数据。 -->
    <item android:id="@+id/menu_paste"
          android:icon="@drawable/ic_edit"
          android:title="@string/menu_paste"
          android:alphabeticShortcut='p' />
</menu>
